[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/ubuntu-font-family-0.83/ubuntu-font-family-0.83/Ubuntu-R.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ButtonTheme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/GridLocation.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="GridLocation" type="ViewportContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -869.0
margin_bottom = -176.0
rect_min_size = Vector2( 411, 544 )
rect_pivot_offset = Vector2( 205, 272 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 374.0
margin_bottom = 502.0
rect_min_size = Vector2( 364, 492 )
rect_pivot_offset = Vector2( 182, 246 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="NewCardButton" type="Button" parent="."]
margin_left = 160.0
margin_top = 224.0
margin_right = 224.0
margin_bottom = 288.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "+"

[node name="ColumnButtons" type="VBoxContainer" parent="."]
margin_left = 384.0
margin_top = 231.0
margin_right = 416.0
margin_bottom = 299.0
rect_pivot_offset = Vector2( 16, 32 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="AddColumnButton" type="Button" parent="ColumnButtons"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
rect_pivot_offset = Vector2( 16, 16 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "+"

[node name="RemoveColumnButton" type="Button" parent="ColumnButtons"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
rect_pivot_offset = Vector2( 16, 16 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "-"

[node name="RowButtons" type="HBoxContainer" parent="."]
margin_left = 142.0
margin_top = 512.0
margin_right = 210.0
margin_bottom = 544.0
rect_pivot_offset = Vector2( 32, 16 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="AddRowButton" type="Button" parent="RowButtons"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
rect_pivot_offset = Vector2( 16, 16 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "+"

[node name="RemoveRowButton" type="Button" parent="RowButtons"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
rect_pivot_offset = Vector2( 16, 16 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "-"
[connection signal="pressed" from="NewCardButton" to="." method="_onNewCardButtonPressed"]
[connection signal="pressed" from="ColumnButtons/AddColumnButton" to="." method="_onAddColumnButtonpressed"]
[connection signal="pressed" from="ColumnButtons/RemoveColumnButton" to="." method="_onRemoveColumnButtonPressed"]
[connection signal="pressed" from="RowButtons/AddRowButton" to="." method="_onAddRowButtonPressed"]
[connection signal="pressed" from="RowButtons/RemoveRowButton" to="." method="_onRemoveRowButtonPressed"]
